--- a/YourCityEvents/Modules/Login/View/LoginVC.xib
+++ b/YourCityEvents/Modules/Login/View/LoginVC.xib
@@ -9,6 +9,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Inter-Regular.ttf">
+            <string>Inter-Regular</string>
+        </array>
+        <array key="Inter-SemiBold.ttf">
+            <string>Inter-SemiBold</string>
+        </array>
         <array key="Roboto-Medium.ttf">
             <string>Roboto-Medium</string>
         </array>
@@ -27,7 +33,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="OxG-Qj-gEo">
-                    <rect key="frame" x="57" y="306" width="300" height="294"/>
+                    <rect key="frame" x="57" y="306.66666666666669" width="300" height="293.00000000000006"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W42-DM-r5Q" customClass="InputView" customModule="YourCityEvents" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="300" height="66"/>
@@ -72,17 +78,17 @@
                             </connections>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="ZPS-Wh-Wgu">
-                            <rect key="frame" x="18" y="260" width="264" height="34"/>
+                            <rect key="frame" x="15" y="259.99999999999994" width="270" height="33"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don’t have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="98Y-Hc-YeL">
-                                    <rect key="frame" x="0.0" y="0.0" width="189.66666666666666" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="181" height="33"/>
+                                    <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yd6-uh-nAh">
-                                    <rect key="frame" x="202.66666666666669" y="0.0" width="61.333333333333314" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                    <rect key="frame" x="194" y="0.0" width="76" height="33"/>
+                                    <fontDescription key="fontDescription" name="Inter-SemiBold" family="Inter" pointSize="18"/>
                                     <state key="normal" title="Sign up">
                                         <color key="titleColor" name="MainBlue"/>
                                     </state>
@@ -92,14 +98,14 @@
                                 </button>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="width" constant="264" id="HRd-ia-SNg"/>
+                                <constraint firstAttribute="width" constant="270" id="HRd-ia-SNg"/>
                             </constraints>
                         </stackView>
                     </subviews>
                 </stackView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YourCityEvents" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnN-KT-7bB">
-                    <rect key="frame" x="85.000000000000014" y="232" width="244.33333333333337" height="42"/>
-                    <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="36"/>
+                    <rect key="frame" x="85.000000000000014" y="232.66666666666666" width="244.33333333333337" height="41.999999999999972"/>
+                    <fontDescription key="fontDescription" name="Inter-SemiBold" family="Inter" pointSize="36"/>
                     <color key="textColor" name="MainBlue"/>
                     <nil key="highlightedColor"/>
                 </label>
