--- a/YourCityEvents/View/InputView/InputView.xib
+++ b/YourCityEvents/View/InputView/InputView.xib
@@ -9,6 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Inter-Regular.ttf">
+            <string>Inter-Regular</string>
+        </array>
         <array key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
         </array>
@@ -27,33 +30,33 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="eNM-CC-f70">
-            <rect key="frame" x="0.0" y="0.0" width="497" height="114"/>
+            <rect key="frame" x="0.0" y="0.0" width="497" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fif-o7-1te">
-                    <rect key="frame" x="0.0" y="0.0" width="497" height="114"/>
+                    <rect key="frame" x="0.0" y="0.0" width="497" height="60"/>
                     <subviews>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Неверный пароль" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylL-nI-iz6">
-                            <rect key="frame" x="15" y="97.5" width="467" height="16.5"/>
+                            <rect key="frame" x="15" y="43" width="467" height="17"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                            <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="14"/>
                             <color key="textColor" red="0.96364933249999996" green="0.45617842669999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cnh-3e-vW2">
-                            <rect key="frame" x="0.0" y="0.0" width="497" height="98"/>
+                            <rect key="frame" x="0.0" y="0.0" width="497" height="44"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0aw-h5-07V">
-                                    <rect key="frame" x="20" y="39" width="399" height="20"/>
+                                    <rect key="frame" x="20" y="8" width="399" height="28"/>
                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                    <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="16"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0.2Eye" translatesAutoresizingMaskIntoConstraints="NO" id="Khq-Yi-Xn5">
-                                    <rect key="frame" x="429" y="25" width="48" height="48"/>
+                                    <rect key="frame" x="429" y="-2" width="48" height="48"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F23-i7-ir0">
-                                    <rect key="frame" x="15" y="49" width="0.0" height="0.0"/>
+                                    <rect key="frame" x="15" y="22" width="0.0" height="0.0"/>
                                     <constraints>
                                         <constraint firstAttribute="width" id="pdr-a2-CZ8"/>
                                     </constraints>
@@ -66,7 +69,9 @@
                             <constraints>
                                 <constraint firstItem="Khq-Yi-Xn5" firstAttribute="leading" secondItem="0aw-h5-07V" secondAttribute="trailing" constant="10" id="DGr-TB-D2O"/>
                                 <constraint firstItem="0aw-h5-07V" firstAttribute="centerY" secondItem="cnh-3e-vW2" secondAttribute="centerY" id="Fnz-Yv-duo"/>
+                                <constraint firstItem="0aw-h5-07V" firstAttribute="top" secondItem="cnh-3e-vW2" secondAttribute="top" constant="8" id="RaI-cd-44m"/>
                                 <constraint firstItem="F23-i7-ir0" firstAttribute="centerY" secondItem="cnh-3e-vW2" secondAttribute="centerY" id="aD7-1E-SB6"/>
+                                <constraint firstAttribute="bottom" secondItem="0aw-h5-07V" secondAttribute="bottom" constant="8" id="gXK-84-Te7"/>
                                 <constraint firstAttribute="trailing" secondItem="Khq-Yi-Xn5" secondAttribute="trailing" constant="20" id="krF-pU-qlc"/>
                                 <constraint firstItem="F23-i7-ir0" firstAttribute="leading" secondItem="cnh-3e-vW2" secondAttribute="leading" constant="15" id="lI0-LE-0mL"/>
                                 <constraint firstItem="Khq-Yi-Xn5" firstAttribute="centerY" secondItem="cnh-3e-vW2" secondAttribute="centerY" id="tSZ-dx-XJN"/>
@@ -117,7 +122,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Vau-Oh-LY6"/>
-            <point key="canvasLocation" x="197.82608695652175" y="-174.10714285714286"/>
+            <point key="canvasLocation" x="197.82608695652175" y="-179.46428571428569"/>
         </view>
     </objects>
     <resources>
@@ -126,7 +131,7 @@
             <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="BackgroundGrey">
-            <color red="0.96499999999999997" green="0.96099999999999997" blue="0.96099999999999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.9649999737739563" green="0.96100002527236938" blue="0.96100002527236938" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <namedColor name="DFDFDF_Alto">
             <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
